# home-assistant-demo

./: .gitignore  DEMO.md  Dockerfile  Q2_2025_DEMO.md  README.md  camera_images.yaml  data-deployment.yaml  dbmodule_data_init.yaml  dbmodule_facedb.yaml  dbmodule_persistent_volumes.yaml  dbmodule_sensordb.yaml  dbmodule_servicedb.yaml  docker-compose.yaml  down  face_detection_mcp_server.yaml  face_down  face_up  ha-config-persistentvolumeclaim.yaml  ha-mosquitto-persistentvolumeclaim.yaml  homeassistant-cm1-configmap.yaml  homeassistant-deployment.yaml  homeassistant-service.yaml  info_retrieval_mcp_server.yaml  mcp.json  milvus.yaml  mosquitto-deployment.yaml  mosquitto-service.yaml  populate.yaml  triton.yaml  triton_models.yaml  up  update_mqtt.sh
config/: .shopping_list.json  automations.yaml  configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
config/.storage/: auth  backup  http  (+21 more)
control/: alarm.py  camera.py  change_lights.py  config.py  data.py  door.py  external_oneshot.py  external_simulate.py  lights.py  motion.py  oneshot.py  presence.py  rotate_camera  set_camera.py  simulate.py  siren.py  temperature.py  wait.sh  windows.py
dbmodule_data_image/: Dockerfile  README.md  build.sh
homeassistant_camera_mcp_server/: Dockerfile  README.md  ha_camera_mcp.yaml  homeassistant_camera_mcp.py  requirements.txt
info-retrieval-mcp/: Dockerfile  README.md  build.sh  initial_sensor_status.json  pyproject.toml
info-retrieval-mcp/src/info_retrieval_mcp/: __init__.py  app_factory.py  asgi.py  server.py
(+5 files in other folders)
